fix: 更新package.json中的作者名称，并调整vite.config.js中的基础路径处理

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "experiments",
     "lab"
   ],
-  "author": "zzm",
+  "author": "keteng",
   "license": "MIT",
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
