--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "css-tricks/*"
   ],
   "dependencies": {
+    "axios": "^1.13.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "vue": "^3.5.22"
